# reserva-app

./: README.md  TODO.md  pyproject.toml
reserva_app/: app.py  db.py  routes_reservas.py  routes_salas.py  routes_usuario.py
reserva_app/files/: 1_definicoes_banco.sql  reservas.csv  salas.csv
templates/: cadastrar-sala.html  cadastro.html  detalhe-sala.html  listar-salas.html  login.html  reservar-sala.html  reservas.html
templates/reserva/: detalhe-reserva.html
tests/: escrita_leitura.py
